welcome.lessons.welcome.bat.bool2.LastDigit2.scala.error
lastDigit:17: error: type mismatch;
 found   : Unit
 required: Boolean
  if (D>=2){
  ^